--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -1,3 +1,13 @@
+// Variables pour les breakpoints
 $tablet: 576px;
 $tabletBig: 768px;
 $desktop: 992px;
+
+// Fin des variables pour les breakpoints
+
+// Variables pour les couleurs
+$primary-color: #9356dc;
+$secondary-color: #ff79da;
+$tertiary-color: #99e2d0;
+// Fin des variables pour les couleurs
+
