--- a/assets/css/scss/layouts/_footer.scss
+++ b/assets/css/scss/layouts/_footer.scss
@@ -1,7 +1,11 @@
-.index-foot{
-    background-color: black;
-    margin: 0;
-    padding-left: 20%;
-    padding-top: 20%;
-    text-decoration: none;
+.index-foot {
+  background-color: black;
+  margin: 0;
+  padding-left: 20%;
+  padding-top: 20%;
+  text-decoration: none;
+  .index-foot__logo {
+    width: 50%;
+    height: auto;
+  }
 }
