--- a/assets/css/scss/style.css
+++ b/assets/css/scss/style.css
@@ -1,3 +1,17 @@
 * {
   scroll-behavior: smooth;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.index-foot {
+  background-color: black;
+  margin: 0;
+  padding-left: 20%;
+  padding-top: 20%;
+  text-decoration: none;
+}
+
+.index-foot .index-foot__logo {
+  width: 50%;
+  height: auto;
+}
+/*# sourceMappingURL=style.css.map */
