--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -2,6 +2,8 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 
-@import './base/global';
+@import "./base/global";
 
-@import './layouts/header';
+@import "./layouts/header";
+@import "./layouts/footer";
+@import "./pages/restaurant";
