--- a/assets/css/scss/utils/_mixins.scss
+++ b/assets/css/scss/utils/_mixins.scss
@@ -15,3 +15,19 @@
 }
 
 // Fin de la mixin pour la police
+
+// Mixin pour la mise en page
+@mixin flexbox-rowcenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin flexbox-columncenter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+// Fin de la mixin pour la mise en page
