--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -1,4 +1,5 @@
 // Variables pour les breakpoints
+$smartphone: 480px;
 $tablet: 576px;
 $tabletBig: 768px;
 $desktop: 992px;
@@ -10,4 +11,3 @@ $primary-color: #9356dc;
 $secondary-color: #ff79da;
 $tertiary-color: #99e2d0;
 // Fin des variables pour les couleurs
-
