Création d'un fichier scss pour la page index. Définition des polices dans le fichier global scss. Rédaction du code pour la version smartphone pour le header et le footer

--- a/assets/css/scss/layouts/_footer.scss
+++ b/assets/css/scss/layouts/_footer.scss
@@ -1,11 +1,12 @@
-.index-foot {
-  background-color: black;
-  margin: 0;
-  padding-left: 20%;
-  padding-top: 20%;
-  text-decoration: none;
-  .index-foot__logo {
-    width: 50%;
-    height: auto;
+@media screen and(max-width: $smartphone) {
+  .index-foot {
+    background-color: black;
+    padding-left: 20%;
+    padding-top: 20%;
+    text-decoration: none;
+    .index-foot__logo {
+      width: 50%;
+      height: auto;
+    }
   }
 }
