--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -1,3 +1,16 @@
 * {
   scroll-behavior: smooth;
 }
+
+h1,
+h2,
+h3 {
+  @include titles-and-logo;
+}
+
+main {
+  margin: 0;
+  padding: 0;
+
+  @include text;
+}
