Commentaire sur une recherche à mener

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -1,4 +1,5 @@
 // Déclarer dans l'ordre suivant: utils, base, components, layouts
+// Se renseigner sur les extensions suivantes: @use et @forward. Permet de ne pas utiliser le bouton watch sass
 
 // Utils
 @import "./utils/variables";
