Correction du mentor
Nombreuses erreurs (de base) corrigées par le mentor. Revoir les dites bases et ne pas oublier de se documenter au besoin

--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -1,16 +1,26 @@
-* {
+@font-face {
+  font-family: Shrikhand;
+  src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf);
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url(../../../fonts/Roboto/Roboto-Regular.ttf);
+}
+
+* { 
   scroll-behavior: smooth;
 }
 
 h1,
 h2,
 h3 {
-  @include titles-and-logo;
+ font-family: Shrikhand;
 }
 
-main {
+body {
   margin: 0;
   padding: 0;
 
-  @include text;
+  font-family: Roboto;
 }
