--- a/assets/css/scss/layouts/_header.scss
+++ b/assets/css/scss/layouts/_header.scss
@@ -12,15 +12,18 @@
 //         }
 //     }
 // }
-@media screen and (max-width: $smartphone) {
-  .index-head {
-    @include flexbox-columncenter;
-    .logo_picture {
-      height: auto;
-      width: 20%;
+
+header{
+  @media screen and (max-width: $smartphone) {
+    .index-head {
+      @include flexbox-columncenter;
+      .logo_picture {
+        height: auto;
+        width: 20%;
+      }
     }
-  }
-  .index-head__location {
-    @include flexbox-rowcenter;
+    .index-head__location {
+      @include flexbox-rowcenter;
+    }
   }
 }
