--- a/assets/css/scss/utils/_mixins.scss
+++ b/assets/css/scss/utils/_mixins.scss
@@ -1,20 +1,4 @@
-// Mixin pour la police
 
-@mixin titles-and-logo {
-  @font-face {
-    font-family: Shrikhand;
-    src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf);
-  }
-}
-
-@mixin text {
-  @font-face {
-    font-family: Roboto;
-    src: url(../../../fonts/Roboto/Roboto-Regular.ttf);
-  }
-}
-
-// Fin de la mixin pour la police
 
 // Mixin pour la mise en page
 @mixin flexbox-rowcenter {
@@ -31,3 +15,24 @@
 }
 
 // Fin de la mixin pour la mise en page
+
+
+//---------------------------Les mauvaises idées---------------------------------
+
+// Mixin pour la police--inutile! Déclarer les polices dans le fichier global
+
+// @mixin titles-and-logo {
+//   @font-face {
+//     font-family: Shrikhand;
+//     src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf);
+//   }
+// }
+
+// @mixin text {
+//   @font-face {
+//     font-family: Roboto;
+//     src: url(../../../fonts/Roboto/Roboto-Regular.ttf);
+//   }
+// }
+
+// Fin de la mixin pour la police
