--- a/assets/css/scss/style.css
+++ b/assets/css/scss/style.css
@@ -4,19 +4,19 @@
 
 @font-face {
   h1,
-  h2,
-  h3 {
+h2,
+h3 {
     font-family: Shrikhand;
     src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf);
   }
 }
 
-main {
+body {
   margin: 0;
   padding: 0;
 }
 @font-face {
-  main {
+  body {
     font-family: Roboto;
     src: url(../../../fonts/Roboto/Roboto-Regular.ttf);
   }
@@ -51,4 +51,4 @@ main {
     width: 50%;
     height: auto;
   }
-} /*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
