Rechargement des modules node js

--- a/assets/css/scss/style.css
+++ b/assets/css/scss/style.css
@@ -1,53 +1,53 @@
+@font-face {
+  font-family: Shrikhand;
+  src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf);
+}
+@font-face {
+  font-family: Roboto;
+  src: url(../../../fonts/Roboto/Roboto-Regular.ttf);
+}
 * {
   scroll-behavior: smooth;
 }
 
-@font-face {
-  h1,
+h1,
 h2,
 h3 {
-    font-family: Shrikhand;
-    src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf);
-  }
+  font-family: Shrikhand;
 }
 
 body {
   margin: 0;
   padding: 0;
-}
-@font-face {
-  body {
-    font-family: Roboto;
-    src: url(../../../fonts/Roboto/Roboto-Regular.ttf);
-  }
+  font-family: Roboto;
 }
 
 @media screen and (max-width: 480px) {
-  .index-head {
+  header .index-head {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .index-head .logo_picture {
+  header .index-head .logo_picture {
     height: auto;
     width: 20%;
   }
-
-  .index-head__location {
+  header .index-head__location {
     display: flex;
     justify-content: center;
     align-items: center;
   }
 }
+
 @media screen and (max-width: 480px) {
-  .index-foot {
+  footer .index-foot {
     background-color: black;
     padding-left: 20%;
     padding-top: 20%;
     text-decoration: none;
   }
-  .index-foot .index-foot__logo {
+  footer .index-foot .index-foot__logo {
     width: 50%;
     height: auto;
   }
