Correction des changements de noms de balises
Les balises ayant changé de noms suite à la dernière correction; il a fallu les rétablir

--- a/assets/css/scss/layouts/_footer.scss
+++ b/assets/css/scss/layouts/_footer.scss
@@ -1,15 +1,12 @@
-footer {
+.index-foot {
   @media screen and(max-width: $smartphone) {
-    .index-foot {
-      background-color: black;
+      background-color:$footer-background;
       padding-left: 20%;
       padding-top: 20%;
       text-decoration: none;
       .index-foot__logo {
         width: 50%;
         height: auto;
-      }
-    }
-  }
+      } 
 }
-
+}
