--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -10,4 +10,7 @@ $desktop: 992px;
 $primary-color: #9356dc;
 $secondary-color: #ff79da;
 $tertiary-color: #99e2d0;
+$background-color-grey: #f6f6f6;
+$background-color-darkgrey: #eaeaea;
+$footer-background: #353535;
 // Fin des variables pour les couleurs
