Configuration du header sur la version mobile

--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -14,3 +14,11 @@ $background-color-grey: #f6f6f6;
 $background-color-darkgrey: #eaeaea;
 $footer-background: #353535;
 // Fin des variables pour les couleurs
+
+// Variables pour la police
+
+$title-size: 2rem;
+$subtitle-size: 1.2rem;
+$description-size: 0.5rem;
+
+// Fin des variables pour la police
