--- a/assets/css/scss/layouts/_header.scss
+++ b/assets/css/scss/layouts/_header.scss
@@ -1,3 +1,25 @@
+.index-head {
+  @media screen and (max-width: $smartphone) {
+    @include flexbox-columncenter;
+    .logo_picture {
+      height: auto;
+      width: 50%;
+      @include flexbox-rowcenter;
+      padding: 15px;
+    }
+    .index-head__location {
+      box-shadow: inset 5px 5px 15px 5px $background-color-grey;
+      width: 100%;
+      @include flexbox-rowcenter;
+      gap: 10px;
+      background-color: $background-color-darkgrey;
+    }
+    .index-head__locationtext {
+      font-size: $subtitle-size;
+    }
+  }
+}
+
 // exemple de configuration
 // header{
 //     nav{
@@ -12,16 +34,3 @@
 //         }
 //     }
 // }
-
-.index-head{
-  @media screen and (max-width: $smartphone) {
-      @include flexbox-columncenter;
-      .logo_picture {
-        height: auto;
-        width: 20%;
-      }
-    .index-head__location {
-      @include flexbox-rowcenter;
-    }
-  }
-}
