--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,21 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+  .section1__searchbutton {
+    width: 60%;
+    height: auto;
+    color: white;
+    padding: 10px;
+    border: 1px solid #fdfdfd;
+    border-radius: 139px;
+    background: #ff79da;
+    background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+    background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+    background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+  }
+}
+
+@media screen and (max-width: 480px) {
   .index-head {
     display: flex;
     flex-direction: column;
@@ -63,5 +78,23 @@ body {
   .index-foot .index-foot__logo {
     width: 50%;
     height: auto;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .section1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .section1 .section1__maintitle {
+    font-size: 1.8rem;
+    text-align: center;
+    font-weight: bold;
+  }
+  .section1 .section1__maintitle .section1__subtitle {
+    font-size: 1.2rem;
+    text-align: center;
   }
 }
