--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -18,9 +18,11 @@ h3 {
   font-family: Shrikhand;
 }
 
+p {
+  font-family: Roboto;
+}
+
 body {
   margin: 0;
   padding: 0;
-
-  font-family: Roboto;
 }
