--- a/assets/css/scss/components/_button_section1.scss
+++ b/assets/css/scss/components/_button_section1.scss
@@ -4,6 +4,7 @@
     height: auto;
     color: white;
     padding: 10px;
+    margin-top: 20px;
     border: 1px solid #fdfdfd;
     border-radius: 139px;
     background: #ff79da;
