Début de la configuration de la section 2

--- a/assets/css/scss/pages/_index.scss
+++ b/assets/css/scss/pages/_index.scss
@@ -16,3 +16,12 @@
     }
   }
 }
+
+.section2 {
+  @media screen and (max-width: $smartphone) {
+    @include flexbox-columncenter;
+    .section2__maintitle {
+      text-align: left;
+    }
+  }
+}
