--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -12,6 +12,7 @@
 // Components
 
 @import "./components/button_section1";
+@import "./components/cards_section2";
 
 // Layouts
 @import "./layouts/header";
