--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -13,6 +13,7 @@
 
 @import "./components/button_section1";
 @import "./components/cards_section2";
+@import "./components/cards_section3";
 
 // Layouts
 @import "./layouts/header";
