--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,44 @@ body {
     -webkit-border-radius: 40px;
     -moz-border-radius: 40px;
     border-radius: 40px;
+    background-color: #f6f6f6;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .resto-prev__card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: auto;
+    border: 2px solid rgba(0, 0, 0, 0.01);
+    border-radius: 17px;
+  }
+  .resto-prev__card .resto-prev__cardlink {
+    text-decoration: none;
+    color: black;
+  }
+  .resto-prev__card .card--new {
+    position: relative;
+    left: 230px;
+    top: 60px;
+    width: 20%;
+    color: #139273;
+    font-weight: bold;
+    border-radius: 3px;
+    background-color: #99e2d0;
+    padding: 5px;
+  }
+  .resto-prev__card .card__picture {
+    width: 100%;
+    height: auto;
+    border-radius: 17px 17px 0px 0px;
+  }
+  .resto-prev__card .card__description {
+    border: 2px solid rgba(0, 0, 0, 0.01);
+    border-radius: 0px 0px 17px 17px;
   }
 }
 
@@ -135,6 +173,19 @@ body {
     align-items: center;
   }
   .section2 .section2__maintitle {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .section3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f6f6f6;
+  }
+  .section3 .resto-prev__maintitle {
     text-align: left;
   }
 }
