--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -21,13 +21,16 @@
       padding: 5px;
     }
     .card__picture {
-      width: 100%;
-      height: auto;
+      width: 319px;
+      height: 216px;
       border-radius: 17px 17px 0px 0px;
     }
     .card__description {
       border: 2px solid rgba(0, 0, 0, 0.01);
       border-radius: 0px 0px 17px 17px;
+      width: 100%;
+      @include flexbox-rowcenter;
+      flex-wrap: wrap;
     }
   }
 }
