--- a/assets/css/scss/pages/_index.scss
+++ b/assets/css/scss/pages/_index.scss
@@ -24,6 +24,7 @@
 .section2 {
   @media screen and (max-width: $smartphone) {
     @include flexbox-columncenter;
+    margin-bottom: 50px;
     .section2__maintitle {
       text-align: left;
     }
