--- a/assets/css/scss/utils/_mixins.scss
+++ b/assets/css/scss/utils/_mixins.scss
@@ -22,6 +22,13 @@
   align-items: center;
 }
 
+@mixin flexbox-columnstart {
+  display: flex;
+  flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+}
+
 // Fin de la mixin pour la mise en page
 
 
