Configuration des cartes section 3
Ajustement des titres et icônes grâce aux positions relative. Création d'une nouvelle mixin pour la mise en page.

--- a/assets/css/scss/utils/_mixins.scss
+++ b/assets/css/scss/utils/_mixins.scss
@@ -29,6 +29,12 @@ justify-content: flex-start;
 align-items: flex-start;
 }
 
+@mixin flexbox-spacebetween {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
 // Fin de la mixin pour la mise en page
 
 
