--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -3,7 +3,7 @@
     @include flexbox-columncenter;
     width: 80%;
     height: auto;
-    border: 2px solid rgba(0, 0, 0, 0.01);
+    // border: 2px solid rgba(0, 0, 0, 0.01);
     border-radius: 17px;
     .resto-prev__cardlink {
       text-decoration: none;
@@ -13,7 +13,7 @@
       position: relative;
       left: 230px;
       top: 60px;
-      width: 20%;
+      width: 25%;
       color: #139273;
       font-weight: bold;
       border-radius: 3px;
@@ -29,19 +29,24 @@
       border: 5px solid rgba(0, 0, 0, 0.01);
       border-radius: 0px 0px 17px 17px;
       width: 100%;
-      @include flexbox-rowstart;
+      height: 114px;
+      padding-left: 10px;
+      @include flexbox-spacebetween;
       flex-wrap: wrap;
     }
     .description__title{
-      width: 100%;
+      width: 70%;
     }
     .description__subtitle{
-      width: 88%;
+      width: 60%;
       margin-top: -10px;
     }
     .description__hearticon{
       font-size: 35px;
       align-self: stretch;
+      position: relative;
+      bottom: 70px;
+      right: 20px;
     }
   }
 }
