--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,6 @@ body {
     align-items: center;
     width: 80%;
     height: auto;
-    border: 2px solid rgba(0, 0, 0, 0.01);
     border-radius: 17px;
   }
   .resto-prev__card .resto-prev__cardlink {
@@ -79,7 +78,7 @@ body {
     position: relative;
     left: 230px;
     top: 60px;
-    width: 20%;
+    width: 25%;
     color: #139273;
     font-weight: bold;
     border-radius: 3px;
@@ -95,22 +94,26 @@ body {
     border: 5px solid rgba(0, 0, 0, 0.01);
     border-radius: 0px 0px 17px 17px;
     width: 100%;
+    height: 114px;
+    padding-left: 10px;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-between;
+    align-items: stretch;
     flex-wrap: wrap;
   }
   .resto-prev__card .description__title {
-    width: 100%;
+    width: 70%;
   }
   .resto-prev__card .description__subtitle {
-    width: 88%;
+    width: 60%;
     margin-top: -10px;
   }
   .resto-prev__card .description__hearticon {
     font-size: 35px;
     align-self: stretch;
+    position: relative;
+    bottom: 70px;
+    right: 20px;
   }
 }
 
