--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,10 +89,12 @@ body {
     width: 319px;
     height: 216px;
     border-radius: 17px 17px 0px 0px;
+    box-shadow: 5px 5px 8px 5px #DFDFDF;
   }
   .resto-prev__card .card__description {
     border: 5px solid rgba(0, 0, 0, 0.01);
     border-radius: 0px 0px 17px 17px;
+    box-shadow: 5px 5px 8px 5px #DFDFDF;
     width: 100%;
     height: 114px;
     padding-left: 10px;
@@ -103,13 +105,15 @@ body {
   }
   .resto-prev__card .description__title {
     width: 70%;
+    font-weight: bold;
   }
   .resto-prev__card .description__subtitle {
     width: 60%;
-    margin-top: -10px;
+    margin-top: -15px;
+    font-weight: normal;
   }
   .resto-prev__card .description__hearticon {
-    font-size: 35px;
+    font-size: 30px;
     align-self: stretch;
     position: relative;
     bottom: 70px;
