--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -3,11 +3,26 @@
     @include flexbox-rowcenter;
     gap: 20px;
     width: 90%;
-    margin-top: 10px;
-    border: 5px solid rgba(0, 0, 0, 0.02);
-    -webkit-border-radius: 40px;
-    -moz-border-radius: 40px;
-    border-radius: 40px;
+    height: auto;
+    margin-top: 30px;
+    box-shadow: 5px 5px 8px 5px #DFDFDF;
+    border-radius: 15px;
     background-color: $background-color-grey;
+    .section2__number{
+      @include flexbox-rowcenter;
+      margin: 0;
+      width: 25px;
+      height: 25px;
+      color: white;
+      font-size: 10px;
+    border-radius: 50%;
+    background-color: $primary-color;
+    }
+    .section2__icon{
+      color: rgba(0, 0, 0, 0.506);
+    }
+    .section2__text{
+      font-weight: bold;
+    }
   }
 }
