--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,10 +53,30 @@ body {
     margin: auto;
     gap: 20px;
     width: 90%;
-    margin-top: 10px;
-    border: 5px solid rgba(0, 0, 0, 0.02);
-    border-radius: 40px;
+    height: auto;
+    margin-top: 30px;
+    box-shadow: 5px 5px 8px 5px #DFDFDF;
+    border-radius: 15px;
     background-color: #f6f6f6;
+  }
+  .section2__card .section2__number {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin: 0;
+    width: 25px;
+    height: 25px;
+    color: white;
+    font-size: 10px;
+    border-radius: 50%;
+    background-color: #9356dc;
+  }
+  .section2__card .section2__icon {
+    color: rgba(0, 0, 0, 0.506);
+  }
+  .section2__card .section2__text {
+    font-weight: bold;
   }
 }
 
@@ -213,10 +233,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-items: flex-start;
     margin-bottom: 50px;
   }
   .section2 .section2__maintitle {
-    text-align: left;
+    margin-left: 20px;
   }
 }
 
