--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -3,7 +3,7 @@
     @include flexbox-columncenter;
     width: 80%;
     height: auto;
-    // border: 2px solid rgba(0, 0, 0, 0.01);
+    // border: 2px solid rgba(0, 0, 0, 0.01); config ratée
     border-radius: 17px;
     .resto-prev__cardlink {
       text-decoration: none;
