--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -11,18 +11,19 @@
       color: black;
     }
     .card--new {
-      position: relative;
-      left: 230px;
-      top: 60px;
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      right: 15%;
       width: 25%;
       color: #139273;
       font-weight: bold;
       border-radius: 3px;
       background-color: #99e2d0;
-      padding: 5px;
+      padding: 5px 10px;
     }
     .card__picture {
-      width: 319px;
+      width: 100%;
       height: 216px;
       border-radius: 17px 17px 0px 0px;
       box-shadow: 5px 5px 8px 5px #dfdfdf;
