--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,18 +97,19 @@ body {
     color: black;
   }
   .resto-prev__card .card--new {
-    position: relative;
-    left: 230px;
-    top: 60px;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    right: 15%;
     width: 25%;
     color: #139273;
     font-weight: bold;
     border-radius: 3px;
     background-color: #99e2d0;
-    padding: 5px;
+    padding: 5px 10px;
   }
   .resto-prev__card .card__picture {
-    width: 319px;
+    width: 100%;
     height: 216px;
     border-radius: 17px 17px 0px 0px;
     box-shadow: 5px 5px 8px 5px #dfdfdf;
@@ -183,6 +184,7 @@ body {
     background-color: #353535;
     padding-left: 7%;
     padding-top: 8%;
+    padding-bottom: 8%;
   }
   .index-foot .index-foot__logo {
     width: 25%;
@@ -250,5 +252,9 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #f6f6f6;
+  }
+  .section3 .resto-prev__maintitle {
+    position: relative;
+    right: 105px;
   }
 }
