--- a/assets/css/scss/pages/_index.scss
+++ b/assets/css/scss/pages/_index.scss
@@ -40,6 +40,7 @@
   @media screen and (max-width: $smartphone) {
     @include flexbox-columncenter;
     background-color: $background-color-grey;
+    margin-bottom: 10px;
     .resto-prev__maintitle {
       position: relative;
       right: 105px;
