--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -1,7 +1,8 @@
 .resto-prev__card {
   @media screen and (max-width: $smartphone) {
     @include flexbox-columncenter;
-    width: 80%;
+    align-items: stretch;
+    width: 88%;
     height: auto;
     margin-bottom: 30px;
     // border: 2px solid rgba(0, 0, 0, 0.01); config ratée
@@ -33,9 +34,9 @@
       border-radius: 0px 0px 17px 17px;
       box-shadow: 5px 5px 8px 5px #dfdfdf;
       width: 100%;
-      height: 114px;
+      height: 100px;
       padding-left: 10px;
-      @include flexbox-spacebetween;
+      @include flexbox-rowstart;
       flex-wrap: wrap;
     }
     .description__title {
@@ -49,10 +50,8 @@
     }
     .description__hearticon {
       font-size: 30px;
-      align-self: stretch;
-      position: relative;
-      bottom: 70px;
-      right: 20px;
+      position: absolute;
+      right: 70px;
     }
   }
 }
