--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,8 @@ p {
 }
 
 img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 body {
@@ -40,8 +41,6 @@ body {
     border: 1px solid #fdfdfd;
     border-radius: 139px;
     background: #ff79da;
-    background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
-    background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
     background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   }
 }
@@ -87,7 +86,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    align-items: stretch;
+    width: 88%;
     height: auto;
     margin-bottom: 30px;
     border-radius: 17px;
@@ -119,11 +119,11 @@ body {
     border-radius: 0px 0px 17px 17px;
     box-shadow: 5px 5px 8px 5px #dfdfdf;
     width: 100%;
-    height: 114px;
+    height: 100px;
     padding-left: 10px;
     display: flex;
-    justify-content: space-between;
-    align-items: stretch;
+    flex-direction: row;
+    justify-content: flex-start;
     flex-wrap: wrap;
   }
   .resto-prev__card .description__title {
@@ -137,10 +137,8 @@ body {
   }
   .resto-prev__card .description__hearticon {
     font-size: 30px;
-    align-self: stretch;
-    position: relative;
-    bottom: 70px;
-    right: 20px;
+    position: absolute;
+    right: 70px;
   }
 }
 
@@ -196,7 +194,6 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
     gap: 10px;
     height: 25px;
   }
@@ -252,9 +249,10 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #f6f6f6;
+    margin-bottom: 10px;
   }
   .section3 .resto-prev__maintitle {
     position: relative;
     right: 105px;
   }
-}
+}/*# sourceMappingURL=style.css.map */
