--- a/assets/css/scss/pages/_index.scss
+++ b/assets/css/scss/pages/_index.scss
@@ -9,6 +9,7 @@
       font-size: $title-size;
       text-align: center;
       font-weight: bold;
+      margin-bottom: 2px;
     }
     .section1__subtitle {
       font-size: $subtitle-size;
