--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -19,6 +19,7 @@ $footer-background: #353535;
 
 $title-size: 1.8rem;
 $subtitle-size: 1.2rem;
+$subtitle2-size: 1rem;
 $description-size: 0.5rem;
 
 // Fin des variables pour la police
