--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -1,15 +1,18 @@
 .section2__card {
   @media screen and (max-width: $smartphone) {
     @include flexbox-rowcenter;
-    gap: 20px;
+    text-decoration: none;
+    color: black;
     width: 90%;
-    height: auto;
+    height: 70px;
     margin-top: 30px;
     box-shadow: 5px 5px 8px 5px #DFDFDF;
     border-radius: 15px;
     background-color: $background-color-grey;
     .section2__number{
       @include flexbox-rowcenter;
+      position: absolute;
+      left: 10px;
       margin: 0;
       width: 25px;
       height: 25px;
@@ -20,8 +23,11 @@
     }
     .section2__icon{
       color: rgba(0, 0, 0, 0.506);
+      position: absolute;
+      left: 60px;
     }
     .section2__text{
+      font-size: $subtitle-size;
       font-weight: bold;
     }
   }
