--- a/assets/css/scss/layouts/_footer.scss
+++ b/assets/css/scss/layouts/_footer.scss
@@ -14,6 +14,7 @@
     }
     .index-foot__link {
       @include flexbox-rowstart;
+      align-items: center;
       gap: 10px;
       height: 25px;
     }
