--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,10 @@ body {
 @media screen and (max-width: 480px) {
   .section1__searchbutton {
     width: 60%;
-    height: auto;
+    height: 58px;
     color: white;
-    padding: 10px;
+    font-size: 1rem;
+    font-weight: bold;
     margin-top: 20px;
     border: 1px solid #fdfdfd;
     border-radius: 139px;
@@ -51,9 +52,10 @@ body {
     justify-content: center;
     align-items: center;
     margin: auto;
-    gap: 20px;
+    text-decoration: none;
+    color: black;
     width: 90%;
-    height: auto;
+    height: 70px;
     margin-top: 30px;
     box-shadow: 5px 5px 8px 5px #DFDFDF;
     border-radius: 15px;
@@ -64,6 +66,8 @@ body {
     justify-content: center;
     align-items: center;
     margin: auto;
+    position: absolute;
+    left: 10px;
     margin: 0;
     width: 25px;
     height: 25px;
@@ -74,8 +78,11 @@ body {
   }
   .section2__card .section2__icon {
     color: rgba(0, 0, 0, 0.506);
+    position: absolute;
+    left: 60px;
   }
   .section2__card .section2__text {
+    font-size: 1.2rem;
     font-weight: bold;
   }
 }
@@ -100,7 +107,7 @@ body {
     display: flex;
     justify-content: center;
     position: absolute;
-    right: 15%;
+    right: 10%;
     width: 25%;
     color: #139273;
     font-weight: bold;
@@ -138,7 +145,7 @@ body {
   .resto-prev__card .description__hearticon {
     font-size: 30px;
     position: absolute;
-    right: 70px;
+    right: 15%;
   }
 }
 
@@ -194,6 +201,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: center;
     gap: 10px;
     height: 25px;
   }
@@ -220,6 +228,7 @@ body {
     font-size: 1.8rem;
     text-align: center;
     font-weight: bold;
+    margin-bottom: 2px;
   }
   .section1 .section1__subtitle {
     font-size: 1.2rem;
