Cartes menu restaurant
Configuration des cartes en cours mais une erreur de compilation de Sass m'empêche d'avancer. Recherche d'une solution.

--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -36,16 +36,18 @@
 
 .menu{
     @media screen and (max-width:$smartphone) {
-        border-radius: 40px 40px 0px 0px;
+        width: 100%;
+        position: relative;
+        margin-top: -60px;
+        border-radius: 50px 50px 0px 0px;
         background-color: $background-color-grey;
      .menu_maintitle{
 @include flexbox-rowcenter;
-
      }
+
      .maintitle_title{
         font-size: $title-size;
-     }
     }
 }
-
+}
 // Fin de la partie pour le menu
