--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./components/button_section1";
 @import "./components/cards_section2";
 @import "./components/cards_section3";
+@import "./components/menu_cards";
 
 // Layouts
 @import "./layouts/header";
