--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ body {
     width: 90%;
     height: 70px;
     margin-top: 30px;
-    box-shadow: 5px 5px 8px 5px #DFDFDF;
+    box-shadow: 5px 5px 8px 5px #dfdfdf;
     border-radius: 15px;
     background-color: #f6f6f6;
   }
@@ -146,6 +146,15 @@ body {
     font-size: 30px;
     position: absolute;
     right: 15%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .menu-card .card_maintitle {
+    font-size: 1.2rem;
+  }
+  .menu-card .card {
+    border-radius: 50px 50px 50px 50px;
   }
 }
 
@@ -295,7 +304,10 @@ body {
 
 @media screen and (max-width: 480px) {
   .menu {
-    border-radius: 40px 40px 0px 0px;
+    width: 100%;
+    position: relative;
+    margin-top: -60px;
+    border-radius: 50px 50px 0px 0px;
     background-color: #f6f6f6;
   }
   .menu .menu_maintitle {
