Résolution du problème de synchronisation (oubli du tiret bas pour les fichiers scss) configuration de la page restaurant. Ajustement des cartes et du texte

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -14,7 +14,8 @@
 @import "./components/button_section1";
 @import "./components/cards_section2";
 @import "./components/cards_section3";
-@import "./components/menu_cards";
+@import "./components/menu-cards";
+@import "./components/order_button";
 
 // Layouts
 @import "./layouts/header";
