--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,7 @@ p {
 }
 
 img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 body {
@@ -42,6 +41,8 @@ body {
     border: 1px solid #fdfdfd;
     border-radius: 139px;
     background: #ff79da;
+    background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+    background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
     background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   }
 }
@@ -150,11 +151,63 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+  .menu-card {
+    background-color: #f6f6f6;
+  }
   .menu-card .card_maintitle {
     font-size: 1.2rem;
+    font-weight: normal;
   }
   .menu-card .card {
-    border-radius: 50px 50px 50px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 90%;
+    height: 75px;
+    flex-wrap: wrap;
+    border-radius: 20px 20px 20px 20px;
+    color: black;
+    text-decoration: none;
+    box-shadow: 5px 5px 8px 5px #dfdfdf;
+    margin-bottom: 20px;
+    padding: 15px;
+  }
+  .menu-card .card_title {
+    font-weight: bold;
+    width: 100%;
+    margin: 0;
+  }
+  .menu-card .card_subtitle {
+    width: 90%;
+    margin: 0;
+  }
+  .menu-card .card_price {
+    font-weight: bold;
+  }
+  .menu-card .card_checkicon {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .order_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 60%;
+    height: 58px;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-top: 20px;
+    border: 1px solid #fdfdfd;
+    border-radius: 139px;
+    background: #ff79da;
+    background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+    background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+    background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   }
 }
 
@@ -319,4 +372,4 @@ body {
   .menu .maintitle_title {
     font-size: 1.8rem;
   }
-}/*# sourceMappingURL=style.css.map */
+}
