Page restaurant HTML et CSS
Modification du code HTML pour le bouton order. Remplacement de la section par une div et insertion de cette div dans la section menu. Ajustement du bouton order en scss. Création d'une nouvelle variable pour les titres.

--- a/assets/css/scss/components/_order_button.scss
+++ b/assets/css/scss/components/_order_button.scss
@@ -9,6 +9,7 @@
       margin-top: 20px;
       border: 1px solid #fdfdfd;
       border-radius: 139px;
+      box-shadow: 6px 6px 24px 4px #dfdfdf;
       background: #ff79da;
       background: -moz-linear-gradient(
         -45deg,
