--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -2,12 +2,12 @@
   @media screen and (max-width: $smartphone) {
     background-color: $background-color-grey;
     .card_maintitle {
-      font-size: $subtitle-size;
+      font-size: $title2-size;
       font-weight: normal;
       padding-left: 28px;
     }
     .maintitle_border{
-      width: 8%;
+      width: 10%;
       border-bottom: 3px solid $tertiary-color;
       margin-top: -10px;
       margin-bottom: 20px;
