--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -18,6 +18,7 @@ $footer-background: #353535;
 // Variables pour la police
 
 $title-size: 1.8rem;
+$title2-size: 1.5rem;
 $subtitle-size: 1.2rem;
 $subtitle2-size: 1rem;
 $description-size: 0.5rem;
