Correction des polices
Modification du nom des variables (noms trop génériques, trop vague). Ajustement de la taille des polices des cartes de la page restaurant

--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -27,7 +27,7 @@
       left: 60px;
     }
     .section2__text {
-      font-size: $subtitle-size;
+      font-size: $card-subtitle;
       font-weight: bold;
     }
   }
