--- a/assets/css/scss/layouts/_header.scss
+++ b/assets/css/scss/layouts/_header.scss
@@ -15,7 +15,7 @@
       background-color: $background-color-darkgrey;
     }
     .index-head__locationtext {
-      font-size: $subtitle-size;
+      font-size: $card-subtitle;
     }
   }
 }
