--- a/assets/css/scss/pages/_index.scss
+++ b/assets/css/scss/pages/_index.scss
@@ -12,7 +12,7 @@
       margin-bottom: 2px;
     }
     .section1__subtitle {
-      font-size: $subtitle-size;
+      font-size: $card-subtitle;
       text-align: center;
       font-weight: normal;
     }
