--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body {
     left: 60px;
   }
   .section2__card .section2__text {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: bold;
   }
 }
@@ -175,6 +175,7 @@ body {
     flex-wrap: wrap;
     border-radius: 20px 20px 20px 20px;
     color: black;
+    background-color: white;
     text-decoration: none;
     box-shadow: 5px 5px 8px 5px #dfdfdf;
     margin-bottom: 20px;
@@ -184,12 +185,12 @@ body {
     font-weight: bold;
     width: 100%;
     margin: 0;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
   .menu-card .card_subtitle {
-    width: 90%;
+    width: 92%;
     margin: 0;
-    font-size: 1rem;
+    font-size: 1.1rem;
     margin-top: -15px;
   }
   .menu-card .card_price {
@@ -248,7 +249,7 @@ body {
     background-color: #eaeaea;
   }
   .index-head .index-head__locationtext {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -303,7 +304,7 @@ body {
     margin-bottom: 2px;
   }
   .section1 .section1__subtitle {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     text-align: center;
     font-weight: normal;
   }
