--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -1,4 +1,4 @@
-// Variables pour les breakpoints
+// Variables pour les breakpoints (point de rupture en français.Juste au cas où)
 $smartphone: 480px;
 $tablet: 576px;
 $tabletBig: 800px;
