--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -19,6 +19,11 @@ h3 {
   font-family: Shrikhand;
 }
 
+a{
+  text-decoration: none;
+  color: white;
+}
+
 p {
   font-family: Roboto;
   text-overflow: ellipsis;
