--- a/assets/css/scss/layouts/_footer.scss
+++ b/assets/css/scss/layouts/_footer.scss
@@ -1,4 +1,27 @@
 .index-foot {
+  @media screen and (min-width:$tablet) {
+    @include flexbox-columncenter;
+    background-color: $footer-background;
+    padding-left: 7%;
+    padding-top: 8%;
+    padding-bottom: 8%;
+    .index-foot__logo {
+      width: 50%;
+      height: auto;
+      margin-bottom: 20px;
+      filter: invert(99%) sepia(36%) saturate(0%) hue-rotate(57deg)
+        brightness(112%) contrast(100%);
+    }
+    .index-foot__link {
+      @include flexbox-columncenter;
+      gap: 10px;
+      height: 25px;
+      font-size: $subtitle2-size;
+    }
+    .link__icon {
+      color: white;
+    }
+  }
   @media screen and(max-width: $smartphone) {
     @include flexbox-columnstart;
     background-color: $footer-background;
@@ -17,10 +40,6 @@
       align-items: center;
       gap: 10px;
       height: 25px;
-    }
-    .link__text {
-      text-decoration: none;
-      color: white;
     }
     .link__icon {
       color: white;
