--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,11 @@ h3 {
   font-family: Shrikhand;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 p {
   font-family: Roboto;
   text-overflow: ellipsis;
@@ -225,6 +230,27 @@ body {
   }
 }
 
+@media screen and (min-width: 576px) {
+  .index-head {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .index-head .index-head__location {
+    box-shadow: inset 5px 5px 15px 5px #f6f6f6;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    gap: 10px;
+    background-color: #eaeaea;
+  }
+  .index-head .index-head__locationtext {
+    font-size: 1.1rem;
+  }
+}
 @media screen and (max-width: 480px) {
   .index-head {
     display: flex;
@@ -256,6 +282,36 @@ body {
   }
 }
 
+@media screen and (min-width: 576px) {
+  .index-foot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #353535;
+    padding-left: 7%;
+    padding-top: 8%;
+    padding-bottom: 8%;
+  }
+  .index-foot .index-foot__logo {
+    width: 50%;
+    height: auto;
+    margin-bottom: 20px;
+    filter: invert(99%) sepia(36%) saturate(0%) hue-rotate(57deg) brightness(112%) contrast(100%);
+  }
+  .index-foot .index-foot__link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 25px;
+    font-size: 1rem;
+  }
+  .index-foot .link__icon {
+    color: white;
+  }
+}
 @media screen and (max-width: 480px) {
   .index-foot {
     display: flex;
@@ -280,10 +336,6 @@ body {
     align-items: center;
     gap: 10px;
     height: 25px;
-  }
-  .index-foot .link__text {
-    text-decoration: none;
-    color: white;
   }
   .index-foot .link__icon {
     color: white;
